<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity"
    android:padding="30dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="3"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginBottom="30dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/calculate_title"
               android:textSize="40dp"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:orientation="horizontal"
           android:gravity="bottom"
           android:layout_marginBottom="30dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="A= "
               android:textSize="20dp"
               android:layout_marginRight="20dp"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20dp"
               android:id="@+id/edtA"
               android:singleLine="true"
               android:hint="@string/input_a"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:orientation="horizontal"
           android:gravity="top"
           android:layout_marginBottom="30dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="B= "
               android:textSize="20dp"
               android:layout_marginRight="20dp"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20dp"
               android:id="@+id/edtB"
               android:singleLine="true"
               android:hint="@string/input_b"/>
       </LinearLayout>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:id="@+id/btn_calculate"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_marginRight="20dp"
            android:textSize="20dp"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="20dp"
            android:id="@+id/edtResult"
            android:singleLine="true"
            android:hint="@string/edt_result"/>
    </LinearLayout>

</LinearLayout>